# ratp-rs

ratp-rs/: Cargo.toml  README.md  build.rs  example.rs  init-env.sh
ratp-rs/assets/ratp-wsiv-opendata/: Wsiv.wsdl
ratp-rs/src/: main.rs
