[package]
name = "savon-generator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
savon = "0.2.0"
log = "0.4.14"
env_logger = "0.9.0"

[build-dependencies]
savon = "0.2.0"
log = "0.4.14"

[env]
OUT_DIR = "."
RUST_LOG = "savon=TRACE"